# terrascape

./: --output  .gitignore  .gitmodules  Array.h  BRL-CAD-Tolerances.md  BRL-CAD_INTEGRATION.md  CLEANUP_SUMMARY.md  CMakeLists.txt  CTestTestfile.cmake  DETRIA_INTEGRATION.md  FEATURE_DETECTION.md  FeatureDetection.hpp  Geom.h  GreedyInsert.cc  GridTriangulator.cpp  GridTriangulator.h  Heap.cc  IMPLEMENTATION_SUMMARY.md  ISSUES.md  MANIFOLD_FIXES_SUMMARY.md  Map.cc  Map.h  Mask.cc  PERFORMANCE_OPTIMIZATION.md  Quadedge.cc  README.md  README.txt  README_DEMO.md  README_old.md  REMESHING_IMPROVEMENTS.md  SoS_README.md  Subdivision.cc  TODO  TRIANGLE_WINDING_FIX.md  TerraScape.hpp  TerraScape.hpp.backup  TerraScapeImpl.cpp  TerraScapeImpl.h  TerraScapeImpl_old.cpp  TerraScape_current.hpp  (+163 more)
Samples/: ashby.stm  ntc.stm  ozark.stm  westUS.stm
_codeql_build_dir/: CTestTestfile.cmake
mmesh/: CMakeLists.txt  LICENSE  README.md
mmesh/cmake/: mmeshConfig.cmake
mmesh/include/: CMakeLists.txt  meshdecimation.h  meshoptimizer.h
mmesh/src/: CMakeLists.txt  cc.c  cc.h  cchash.h  mathshewchuk.h  meshdecimation.c  meshoptimizer.c  mm.c  mm.h  mmatomic-gnuc.h  mmatomic-gnucx86.h  mmatomic-msvc.h  mmatomic.h  mmbinsort.c  mmbinsort.h  mmcore.c  mmcore.h  mmhash.c  mmhash.h  mmhashinline.h  mmhashinternal.h  mmthread.c  mmthread.h
scape/: Basic.C  Basic.H  Makefile  circle.C  circle.H  cmdline.C  drawscape.C  geom2d.H  glcode.C  glscape.C  heap.C  hfield.C  hfield.H  nogl.C  quadedge.H  scan.C  scape.C  scape.H  simplfield.C  simplfield.H  stuff.C  stuff.H  views.C  views.H
scape/STM-tools/: Makefile  cropstm.c  dem2stm  flat2stm.c  genstm.c  stm2pgm.c  stmops.c  stmops.h
scape/STM-tools/DEMutil/: README-DEMUTIL  convert.c  demtoflat.c  resample.c  resample.txt
scape/Samples/: crater.stm
scape/TIN-tools/: tin2obj
